Respiration Cycle logic implemented, fix wrong scope for SetupSession.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CohérenceCardiaque"
+        android:attributionTags="media_playback"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.CohérenceCardiaque">
+            android:theme="@style/Theme.CohérenceCardiaque"
+            android:attributionTags="media_playback">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
